--- a/StonkMarket/index.html
+++ b/StonkMarket/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
+<!--'C:\Users\Msmet\OneDrive - University of Pittsburgh\Stock_TRIALS\StonkMarket'-->
 <html lang="en">
+<script src='stonkscript.js'></script>
   <head>
     <meta charset="utf-8">
     <title>Stonk Market</title>
     <link rel='stylesheet' href='styles/stonks.css' />
   </head>
 
-  <body>
+  <body onload="init()">
     <div class='header_container'>
-      <h1>Stonk Market</h1>
+      <img class='comp' id='comp1' src="images/comp1.png" alt="computer foreground"/>
+      <img class='comp' id='comp2' src="images/comp2.png" alt="computer foreground"/>
+      <canvas id="headcanvas"></canvas>
+      <h1>STONK MARKET</h1>
+      <div id="grid"></div>
+      <div id="bg1"></div>
+      <div id="bg2"></div>
+      <div id="bg3"></div>
+
     </div>
 
     <div class='menu_container'>
